fix collapsing panels issue

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -69,3 +69,15 @@ textarea {
 .fa {
   margin-right: 6px;
 }
+
+// Collapsible Groups
+// -------------------------
+.panel-heading a:after {
+  font-family:'FontAwesome';
+  content:"\f078";
+  float: right;
+  color: grey;
+}
+.panel-heading a.collapsed:after {
+  content:"\f054";
+}
